--- a/shelter/sass/layout/_help.scss
+++ b/shelter/sass/layout/_help.scss
@@ -18,7 +18,12 @@
   justify-content: center;
   margin-top: 30px;
   @include media-laptop{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    padding: 0 8px;
     row-gap: 28px;
+    column-gap: 0;
   }
   .help-item{
     text-align: center;
