--- a/shelter/sass/layout/_only.scss
+++ b/shelter/sass/layout/_only.scss
@@ -12,6 +12,11 @@
 .only-content{
   @include flex-columns;
   padding-top: 60px;
+  @include media-laptop{
+    padding-top: 22px;
+    flex-direction: column;
+    align-items: center;
+  }
   .only-text{
     margin-top: 155px;
     h1{
@@ -46,7 +51,5 @@
       margin: 114px 0 0 139px;
     }
   }
-  @include media-laptop{
-    padding-top: 22px;
-  }
+  
 }
