--- a/shelter/sass/style.css
+++ b/shelter/sass/style.css
@@ -687,6 +687,19 @@ a {
   }
 }
 
+@media (max-width: 1279px) {
+  .only-content {
+    padding-top: 22px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .only-content .only-text {
   margin-top: 155px;
 }
@@ -734,12 +747,6 @@ a {
   }
 }
 
-@media (max-width: 1279px) {
-  .only-content {
-    padding-top: 22px;
-  }
-}
-
 .about-content {
   height: 588px;
   display: -webkit-box;
@@ -760,6 +767,20 @@ a {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+  }
+}
+
+@media (max-width: 1279px) {
+  .about-content {
+    height: auto;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    padding: 66px 0 100px;
   }
 }
 
@@ -788,15 +809,6 @@ a {
   font-weight: normal;
   line-height: 24px;
   margin: 9px 0 25px;
-}
-
-@media (max-width: 1279px) {
-  .about-content {
-    height: auto;
-    -ms-flex-wrap: wrap-reverse;
-        flex-wrap: wrap-reverse;
-    padding: 66px 0 100px;
-  }
 }
 
 .friends {
@@ -937,7 +949,16 @@ a {
 
 @media (max-width: 1279px) {
   .help-items {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+    -ms-grid-rows: (1fr)[3];
+        grid-template-rows: repeat(3, 1fr);
+    padding: 0 8px;
     row-gap: 28px;
+    -webkit-column-gap: 0;
+            column-gap: 0;
   }
 }
 
@@ -1034,6 +1055,13 @@ a {
         flex-wrap: wrap-reverse;
     height: auto;
     padding: 81px 0 98px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
@@ -1062,7 +1090,7 @@ a {
 }
 
 .donation-content .donation__text > button {
-  padding: 5px 10px;
+  padding: 2px 10px 7px;
   border-radius: 9px;
   height: 43px;
   width: 349px;
